--- a/build.gradle
+++ b/build.gradle
@@ -55,11 +55,14 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.1'
 
     // Pi4J : https://pi4j.com/1.2/index.html
-    compile 'com.pi4j:pi4j-core:1.2'
+    compile group: 'com.pi4j', name: 'pi4j-core', version: '1.2'
+    //compile group: 'com.pi4j:pi4j-core:1.2'
 
     // RPLidar4J : https://github.com/ev3dev-lang-java/RPLidar4J
-    implementation 'com.github.ev3dev-lang-java:RPLidar4J:0.4.0'
+    compile group: 'com.github.ev3dev-lang-java', name: 'RPLidar4J', version: '0.4.0'
+    //compile group: 'com.github.ev3dev-lang-java:RPLidar4J:0.4.0'
 
     // GSon
-    implementation 'com.google.code.gson:gson:2.8.6'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    //compile group: 'com.google.code.gson:gson:2.8.6'
 }
