[SRF08]Add SRF08 management after merge from master in DetectionInterfaceImpl. Correct config_PMI.json

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ task fatJar(type: Jar) {
                 'Implementation-Version': version,
                 'Main-Class': 'core.Main'
     }
-    baseName = project.name
+    baseName = project.name+'-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
