[SRF08]Update to allow proper run depending on selected option (normal, detectiron, switches & coupeOff). Correct the addresses of I2C SRF08 devices that do not have to be shifted (>>1) as the I2C java library deals with it. Now include I2C LCD configuration in the JSON file. Also, the lidar, Ax12 and LCD will no more be instanciated if they are not present in that config JSON file.

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,15 @@ task fatJar(type: Jar) {
                 'Main-Class': 'core.Main'
     }
     baseName = project.name+'-all'
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from { 
+		configurations.compile.collect { 
+			it.isDirectory() ? it : zipTree(it).matching {
+				exclude 'META-INF/**.RSA'
+				exclude 'META-INF/MANIFEST.MF'
+				exclude 'META-INF/log4j-provider.properties'
+			}			
+		}
+	}
     with jar
 }
 
