--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ sourceCompatibility = 1.8
 
 remotes {
     webServer {
-        host = '192.168.1.101'
+        host = '192.168.1.48'
         user = 'esialrobotik'
         identity = file('id_rsa')
     }
@@ -43,7 +43,7 @@ task deployPrincess {
     doLast {
         ssh.run {
             session(remotes.webServer) {
-                put from: 'esialrobotik.ia-all-2.0.jar', into: '/ia'
+                put from: 'esialrobotik.ia-all-2.0.jar', into: '/IA'
                 execute 'sudo sync'
             }
         }
