--- a/config.json
+++ b/config.json
@@ -32,14 +32,14 @@
           "out": 21
         },
         {
-          "desc" : "Avant milieu",
-          "in" : 2,
-          "out": 0
+          "desc" : "Milieu",
+          "in" : 24,
+          "out": 25
         },
         {
           "desc" : "Avant droit",
-          "in" : 24,
-          "out": 25
+          "in" : 2,
+          "out": 0
         },
         {
           "desc" : "Arrière",
