--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'java'
+    id 'org.hidetake.ssh' version '2.10.1'
 }
 
-plugins {
-    id 'org.hidetake.ssh' version '2.10.1'
+ssh.settings {
+    dryRun = project.hasProperty('dryRun')
+    knownHosts = allowAnyHosts
 }
 
 version '2.0'
@@ -13,8 +15,8 @@ sourceCompatibility = 1.8
 remotes {
     webServer {
         host = '192.168.1.48'
-        user = 'esialrobotik'
-        identity = file('id_rsa')
+        user = 'pi'
+        identity = file("${System.properties['user.home']}/.ssh/id_rsa")
     }
 }
 
@@ -43,7 +45,7 @@ task deployPrincess {
     doLast {
         ssh.run {
             session(remotes.webServer) {
-                put from: 'esialrobotik.ia-all-2.0.jar', into: '/IA'
+                put from: 'build/libs/esialrobotik.ia-all-2.0.jar', into: 'IA'
                 execute 'sudo sync'
             }
         }
@@ -53,6 +55,7 @@ task deployPrincess {
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
+    jcenter()
 }
 
 dependencies {
