--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ out/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 id_rsa
+
+#Eclipse IDE
+.classpath
+.project
+bin
