--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ shadowJar {
                 'Implementation-Version': version,
                 'Main-Class': 'core.Main'
     }
-    baseName = project.name+'-all'
+    baseName = project.name
     transform(de.sebastianboegl.gradle.plugins.shadow.transformers.Log4j2PluginsFileTransformer)
 }
 
@@ -45,7 +45,7 @@ task deployPrincess {
     doLast {
         ssh.run {
             session(remotes.webServer) {
-                put from: 'build/libs/esialrobotik.ia-all-2.0.jar', into: 'IA'
+                put from: 'build/libs/esialrobotik.ia-2.0-all.jar', into: 'IA'
                 put from: 'table.tbl', into: 'IA'
                 put from: 'config.json', into: 'IA'
                 put from: 'configCollection.json', into: 'IA'
