--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
 
   "actions": {
     "baud":115200,
-    "serie":"/dev/ttyUSB0",
+    "serie":"/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
     "dataDir":"/home/pi/IA/actions/"
   },
 
@@ -49,7 +49,7 @@
       ]
     },
     "lidar": {
-      "port": "/dev/ttyUSB1"
+      "port": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0"
     }
   }
 }
