--- a/configCollection.json
+++ b/configCollection.json
@@ -186,7 +186,7 @@
           "id": 4,
           "positionX": 0,
           "positionY": 0,
-          "dist": 145,
+          "dist": 150,
           "type": "deplacement",
           "subtype": "go",
           "actionId": -1,
@@ -231,13 +231,13 @@
       ]
     },
     {
-      "desc": "Manches à air",
+      "desc": "Bouée Sud à virer",
       "id": 3,
-      "points": 15,
+      "points": 1,
       "priorite": 1,
       "taches": [
         {
-          "desc": "Placement manche à air",
+          "desc": "Placement bouée Sud à virer",
           "id": 1,
           "positionX": 1500,
           "positionY": 670,
@@ -249,7 +249,7 @@
           "timeout": -1
         },
         {
-          "desc": "Placement manche à air",
+          "desc": "Placement bouée Sud à virer",
           "id": 2,
           "positionX": 1500,
           "positionY": 230,
@@ -261,8 +261,64 @@
           "timeout": -1
         },
         {
-          "desc": "Placement manche à air",
+          "desc": "Placement bouée Sud à virer",
           "id": 3,
+          "positionX": 0,
+          "positionY": 230,
+          "dist": 0,
+          "type": "deplacement",
+          "subtype": "face",
+          "actionId": -1,
+          "mirror": "MIRRORY",
+          "timeout": -1
+        },
+        {
+          "desc": "Marquage bouée Sud à virer",
+          "id": 4,
+          "positionX": 0,
+          "positionY": 0,
+          "dist": 250,
+          "type": "deplacement",
+          "subtype": "go",
+          "actionId": -1,
+          "mirror": "MIRRORY",
+          "timeout": -1
+        },
+        {
+          "desc": "Marquage bouée Sud à virer",
+          "id": 5,
+          "positionX": 0,
+          "positionY": 0,
+          "dist": 140,
+          "type": "deplacement",
+          "subtype": "go",
+          "actionId": -1,
+          "mirror": "MIRRORY",
+          "timeout": -1
+        },
+        {
+          "desc": "Libération bouée Sud à virer",
+          "id": 6,
+          "positionX": 1400,
+          "positionY": 230,
+          "dist": 0,
+          "type": "deplacement",
+          "subtype": "goto_back",
+          "actionId": -1,
+          "mirror": "MIRRORY",
+          "timeout": -1
+        }
+      ]
+    },
+    {
+      "desc": "Manches à air",
+      "id": 4,
+      "points": 15,
+      "priorite": 1,
+      "taches": [
+        {
+          "desc": "Placement manche à air",
+          "id": 1,
           "positionX": 1780,
           "positionY": 210,
           "dist": 0,
@@ -274,7 +330,7 @@
         },
         {
           "desc": "Alignement manche à air",
-          "id": 4,
+          "id": 2,
           "positionX": 1780,
           "positionY": 3000,
           "dist": 0,
@@ -286,7 +342,7 @@
         },
         {
           "desc": "Alignement manche à air",
-          "id": 5,
+          "id": 3,
           "positionX": 0,
           "positionY": 0,
           "dist": -120,
@@ -298,7 +354,7 @@
         },
         {
           "desc": "Sortie bras droit",
-          "id": 6,
+          "id": 4,
           "positionX": 0,
           "positionY": 0,
           "dist": 0,
@@ -309,7 +365,7 @@
         },
         {
           "desc": "Réduction de la vitesse",
-          "id": 7,
+          "id": 5,
           "positionX": 0,
           "positionY": 0,
           "dist": 50,
@@ -321,7 +377,7 @@
         },
         {
           "desc": "Taper les manches",
-          "id": 8,
+          "id": 6,
           "positionX": 0,
           "positionY": 0,
           "dist": 200,
@@ -333,7 +389,7 @@
         },
         {
           "desc": "Alignement manche à air",
-          "id": 9,
+          "id": 7,
           "positionX": 1780,
           "positionY": 3000,
           "dist": 0,
@@ -345,7 +401,7 @@
         },
         {
           "desc": "Taper les manches",
-          "id": 10,
+          "id": 8,
           "positionX": 0,
           "positionY": 0,
           "dist": 250,
@@ -357,7 +413,7 @@
         },
         {
           "desc": "Taper les manches",
-          "id": 11,
+          "id": 9,
           "positionX": 0,
           "positionY": 0,
           "dist": 140,
@@ -369,7 +425,7 @@
         },
         {
           "desc": "Vitesse normale",
-          "id": 12,
+          "id": 10,
           "positionX": 0,
           "positionY": 0,
           "dist": 100,
@@ -381,7 +437,7 @@
         },
         {
           "desc": "Rentrer bras droit",
-          "id": 13,
+          "id": 11,
           "positionX": 0,
           "positionY": 0,
           "dist": 0,
@@ -392,7 +448,7 @@
         },
         {
           "desc": "On quitte la zone",
-          "id": 14,
+          "id": 12,
           "positionX": 0,
           "positionY": 0,
           "dist": -50,
@@ -404,7 +460,7 @@
         },
         {
           "desc": "Alignement boussole",
-          "id": 15,
+          "id": 13,
           "positionX": 0,
           "positionY": 1500,
           "dist": 0,
@@ -416,12 +472,12 @@
         },
         {
           "desc": "Photo",
-          "id": 16,
+          "id": 14,
           "positionX": 0,
           "positionY": 0,
           "dist": 0,
           "type": "manipulation",
-          "actionId": 12,
+          "actionId": 13,
           "mirror": "MIRRORY",
           "timeout": -1
         }
@@ -429,8 +485,8 @@
     },
     {
       "desc": "Récif sud",
-      "id": 4,
-      "points": 9,
+      "id": 5,
+      "points": 8,
       "priorite": 1,
       "taches": [
         {
@@ -612,7 +668,7 @@
     },
     {
       "desc": "Récif sud",
-      "id": 5,
+      "id": 6,
       "points": 8,
       "priorite": 1,
       "taches": [
@@ -900,7 +956,7 @@
           "id": 4,
           "positionX": 0,
           "positionY": 3000,
-          "dist": 145,
+          "dist": 150,
           "type": "deplacement",
           "subtype": "go",
           "actionId": -1,
@@ -945,13 +1001,13 @@
       ]
     },
     {
-      "desc": "Manches à air",
+      "desc": "Bouée Sud à virer",
       "id": 3,
-      "points": 15,
+      "points": 1,
       "priorite": 1,
       "taches": [
         {
-          "desc": "Placement manche à air",
+          "desc": "Placement bouée Sud à virer",
           "id": 1,
           "positionX": 1500,
           "positionY": 2330,
@@ -963,7 +1019,7 @@
           "timeout": -1
         },
         {
-          "desc": "Placement manche à air",
+          "desc": "Placement bouée Sud à virer",
           "id": 2,
           "positionX": 1500,
           "positionY": 2770,
@@ -975,8 +1031,64 @@
           "timeout": -1
         },
         {
-          "desc": "Placement manche à air",
+          "desc": "Placement bouée Sud à virer",
           "id": 3,
+          "positionX": 0,
+          "positionY": 2770,
+          "dist": 0,
+          "type": "deplacement",
+          "subtype": "face",
+          "actionId": -1,
+          "mirror": "MIRRORY",
+          "timeout": -1
+        },
+        {
+          "desc": "Marquage bouée Sud à virer",
+          "id": 4,
+          "positionX": 0,
+          "positionY": 3000,
+          "dist": 250,
+          "type": "deplacement",
+          "subtype": "go",
+          "actionId": -1,
+          "mirror": "MIRRORY",
+          "timeout": -1
+        },
+        {
+          "desc": "Marquage bouée Sud à virer",
+          "id": 5,
+          "positionX": 0,
+          "positionY": 3000,
+          "dist": 140,
+          "type": "deplacement",
+          "subtype": "go",
+          "actionId": -1,
+          "mirror": "MIRRORY",
+          "timeout": -1
+        },
+        {
+          "desc": "Libération bouée Sud à virer",
+          "id": 6,
+          "positionX": 1400,
+          "positionY": 2770,
+          "dist": 0,
+          "type": "deplacement",
+          "subtype": "goto_back",
+          "actionId": -1,
+          "mirror": "MIRRORY",
+          "timeout": -1
+        }
+      ]
+    },
+    {
+      "desc": "Manches à air",
+      "id": 4,
+      "points": 15,
+      "priorite": 1,
+      "taches": [
+        {
+          "desc": "Placement manche à air",
+          "id": 1,
           "positionX": 1780,
           "positionY": 2790,
           "dist": 0,
@@ -988,7 +1100,7 @@
         },
         {
           "desc": "Alignement manche à air",
-          "id": 4,
+          "id": 2,
           "positionX": 1780,
           "positionY": 0,
           "dist": 0,
@@ -1000,7 +1112,7 @@
         },
         {
           "desc": "Alignement manche à air",
-          "id": 5,
+          "id": 3,
           "positionX": 0,
           "positionY": 3000,
           "dist": -120,
@@ -1012,7 +1124,7 @@
         },
         {
           "desc": "Sortie bras gauche",
-          "id": 6,
+          "id": 4,
           "positionX": 0,
           "positionY": 0,
           "dist": 0,
@@ -1023,7 +1135,7 @@
         },
         {
           "desc": "Réduction de la vitesse",
-          "id": 7,
+          "id": 5,
           "positionX": 0,
           "positionY": 3000,
           "dist": 50,
@@ -1035,7 +1147,7 @@
         },
         {
           "desc": "Taper les manches",
-          "id": 8,
+          "id": 6,
           "positionX": 0,
           "positionY": 3000,
           "dist": 200,
@@ -1047,7 +1159,7 @@
         },
         {
           "desc": "Alignement manche à air",
-          "id": 9,
+          "id": 7,
           "positionX": 1780,
           "positionY": 0,
           "dist": 0,
@@ -1059,7 +1171,7 @@
         },
         {
           "desc": "Taper les manches",
-          "id": 10,
+          "id": 8,
           "positionX": 0,
           "positionY": 3000,
           "dist": 250,
@@ -1071,7 +1183,7 @@
         },
         {
           "desc": "Taper les manches",
-          "id": 11,
+          "id": 9,
           "positionX": 0,
           "positionY": 3000,
           "dist": 140,
@@ -1083,7 +1195,7 @@
         },
         {
           "desc": "Vitesse normale",
-          "id": 12,
+          "id": 10,
           "positionX": 0,
           "positionY": 3000,
           "dist": 100,
@@ -1095,7 +1207,7 @@
         },
         {
           "desc": "Rentrer bras gauche",
-          "id": 13,
+          "id": 11,
           "positionX": 0,
           "positionY": 0,
           "dist": 0,
@@ -1106,7 +1218,7 @@
         },
         {
           "desc": "On quitte la zone",
-          "id": 14,
+          "id": 12,
           "positionX": 0,
           "positionY": 3000,
           "dist": -50,
@@ -1118,7 +1230,7 @@
         },
         {
           "desc": "Alignement boussole",
-          "id": 15,
+          "id": 13,
           "positionX": 0,
           "positionY": 1500,
           "dist": 0,
@@ -1130,12 +1242,12 @@
         },
         {
           "desc": "Photo",
-          "id": 16,
+          "id": 14,
           "positionX": 0,
           "positionY": 3000,
           "dist": 0,
           "type": "manipulation",
-          "actionId": 12,
+          "actionId": 13,
           "mirror": "MIRRORY",
           "timeout": -1
         }
@@ -1143,8 +1255,8 @@
     },
     {
       "desc": "Récif sud",
-      "id": 4,
-      "points": 9,
+      "id": 5,
+      "points": 8,
       "priorite": 1,
       "taches": [
         {
@@ -1326,7 +1438,7 @@
     },
     {
       "desc": "Récif sud",
-      "id": 5,
+      "id": 6,
       "points": 8,
       "priorite": 1,
       "taches": [
